@@ -1,8 +1,11 @@
 Revision history for Perl extension PPI
 
 {{$NEXT}}
+	Summary:
+	- Implement Replace Method (GH#274) (Renee and Olaf Alders)
 
 1.275   2022-07-18 19:42:13Z
+	Summary:
 	- CHECK bareword handle parsed as scheduled block (GH#247) (trwyant)
 
 1.274   2022-05-02 18:21:56Z
